# EventHandler

./: CMakeLists.txt  README.md  build_crypto_utility.sh  build_sandbox_dependencies.sh  fetch_dependencies.sh
asset-management-scripts/: Example Batch for Scoring  fetch-asset-by-uuid.sh  submit_batch_asset.sh  submit_data_asset.sh  submit_model_asset.sh  submit_model_inference_asset.sh  verify_model_asset.sh  verify_model_inference_asset.sh
asset-templates/: batch_asset_template.json  data_asset_template.json  linear_model_asset_template.json  model_inference_asset_template.json  performance_claim_asset_template.json
assets/: alternate-housing-model.json  another-housing-model.json  batch_asset_demo.json  example_housing_data.json  housing_data_asset.json  housing_data_asset_demo.json  housing_model_asset.json  housing_model_asset_demo.json  scores_batch_asset0.json  scores_batch_asset0_bad.json  scoring_asset_demo.json  test_batch_asset0.json
config/: swagger.json
contract/: index.js  package-lock.json  package.json
crypto-config/: model_inf.vk  model_prov.vk  model_schema.yaml  scores_schema.yaml
data/: predictions.yaml  (+1 more)
zkdoc/: CMakeLists.txt
zkdoc/src/: trusted_ai_benes_multirouting.cpp  trusted_ai_benes_multirouting.hpp  trusted_ai_datasource.cpp  trusted_ai_datasource.hpp  trusted_ai_gadgets.cpp  trusted_ai_gadgets.hpp  trusted_ai_hash_gadget.cpp  trusted_ai_hash_gadget.hpp  trusted_ai_interface_gadgets.hpp  trusted_ai_linear_regression.cpp  trusted_ai_linear_regression.hpp  trusted_ai_vectors.cpp  trusted_ai_vectors.hpp  trusted_ai_zkp_interface.cpp
(+60 files in other folders)
